--- a/resources/language/Bulgarian/strings.po
+++ b/resources/language/Bulgarian/strings.po
@@ -20,6 +20,70 @@ msgctxt "#32000"
 msgid "General"
 msgstr "General"
 
+msgctxt "#32001"
+msgid "Search Movies"
+msgstr "Търсене в раздел \"Филми\""
+
+msgctxt "#32002"
+msgid "Search TV Shows"
+msgstr "Търсене в раздел \"ТВ Сериали\""
+
+msgctxt "#32003"
+msgid "Search Episodes"
+msgstr "Търсене в епизодите"
+
+msgctxt "#32004"
+msgid "Search Music Videos"
+msgstr "Търсене в раздел \"Музикални клипове\""
+
+msgctxt "#32005"
+msgid "Search Artists"
+msgstr "Търсене в изпълнителите"
+
+msgctxt "#32006"
+msgid "Search Abums"
+msgstr "Търсене в албумите"
+
+msgctxt "#32007"
+msgid "Search Songs"
+msgstr "Търсене в песните"
+
 msgctxt "#32101"
 msgid "Enter search string"
 msgstr "Въведете низ за търсене"
+
+msgctxt "#32203"
+msgid "Browse album"
+msgstr "Преглед на албума"
+
+msgctxt "#32204"
+msgid "Season information"
+msgstr "Информация за сезона"
+
+msgctxt "#32205"
+msgid "Play trailer"
+msgstr "Възпроизведи трейлъра"
+
+msgctxt "#32206"
+msgid "Find album"
+msgstr "Намери албум"
+
+msgctxt "#32207"
+msgid "Find all seasons"
+msgstr "Намери всички сезони"
+
+msgctxt "#32208"
+msgid "Find all episodes"
+msgstr "Намери всички епизоди"
+
+msgctxt "#32209"
+msgid "Find all albums"
+msgstr "Намери всички албуми"
+
+msgctxt "#32210"
+msgid "Find all songs"
+msgstr "Намери всички песни"
+
+msgctxt "#32299"
+msgid "NEW SEARCH"
+msgstr "НОВО ТЪРСЕНЕ"
