--- a/resources/language/Uzbek/strings.po
+++ b/resources/language/Uzbek/strings.po
@@ -9,17 +9,13 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Malay (http://www.transifex.com/projects/p/xbmc-addons/language/ms/)\n"
+"Language-Team: Uzbek (http://www.transifex.com/projects/p/xbmc-addons/language/uz/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ms\n"
+"Language: uz\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "#32000"
 msgid "General"
-msgstr "Am"
-
-msgctxt "#32205"
-msgid "Play trailer"
-msgstr "Main treler"
+msgstr "Umumiy"
