--- a/resources/language/French (Canada)/strings.po
+++ b/resources/language/French (Canada)/strings.po
@@ -9,89 +9,89 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/xbmc-addons/language/ru/)\n"
+"Language-Team: French (Canada) (http://www.transifex.com/projects/p/xbmc-addons/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: fr_CA\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgctxt "#32000"
 msgid "General"
-msgstr "Основные"
+msgstr "Général"
 
 msgctxt "#32001"
 msgid "Search Movies"
-msgstr "Поиск фильмов"
+msgstr "Chercher des films"
 
 msgctxt "#32002"
 msgid "Search TV Shows"
-msgstr "Поиск сериалов"
+msgstr "Chercher des séries TV"
 
 msgctxt "#32003"
 msgid "Search Episodes"
-msgstr "Поиск серий"
+msgstr "Chercher des épisodes"
 
 msgctxt "#32004"
 msgid "Search Music Videos"
-msgstr "Поиск муз. клипов"
+msgstr "Chercher des vidéos de musique"
 
 msgctxt "#32005"
 msgid "Search Artists"
-msgstr "Поиск исполнителей"
+msgstr "Chercher des artistes"
 
 msgctxt "#32006"
 msgid "Search Abums"
-msgstr "Поиск альбомов"
+msgstr "Chercher des albms"
 
 msgctxt "#32007"
 msgid "Search Songs"
-msgstr "Поиск песен"
+msgstr "Chercher des chansons"
 
 msgctxt "#32008"
 msgid "Search Actors"
-msgstr "Поиск актёров"
+msgstr "Chercher des acteurs"
 
 msgctxt "#32101"
 msgid "Enter search string"
-msgstr "Строка поиска"
+msgstr "Saisir la chaîne de recherche"
 
 msgctxt "#32203"
 msgid "Browse album"
-msgstr "Просмотреть альбом"
+msgstr "Parcourir l'album"
 
 msgctxt "#32204"
 msgid "Season information"
-msgstr "Информация о сезоне"
+msgstr "Infomation sur la saison"
 
 msgctxt "#32205"
 msgid "Play trailer"
-msgstr "Показать трейлер"
+msgstr "Jouer la bande-annonce"
 
 msgctxt "#32206"
 msgid "Find album"
-msgstr "Найти альбом"
+msgstr "Trouver un album"
 
 msgctxt "#32207"
 msgid "Find all seasons"
-msgstr "Найти все сезоны"
+msgstr "Trouver tous les saisons"
 
 msgctxt "#32208"
 msgid "Find all episodes"
-msgstr "Найти все серии"
+msgstr "Trouver tous les épisodes"
 
 msgctxt "#32209"
 msgid "Find all albums"
-msgstr "Найти все альбомы"
+msgstr "Trouver tous les albums"
 
 msgctxt "#32210"
 msgid "Find all songs"
-msgstr "Найти все песни"
+msgstr "Trouver tous les chansons"
 
 msgctxt "#32211"
 msgid "Movies starring"
-msgstr "В главных ролях"
+msgstr "Films mettant en vedète"
 
 msgctxt "#32299"
 msgid "NEW SEARCH"
-msgstr "НОВЫЙ ПОИСК"
+msgstr "Nouvelle recherche"
