--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -34,7 +34,7 @@ msgstr "Procurar Episódios"
 
 msgctxt "#32004"
 msgid "Search Music Videos"
-msgstr "Procurar Vídeoclipes"
+msgstr "Procurar Videoclipes"
 
 msgctxt "#32005"
 msgid "Search Artists"
@@ -47,6 +47,10 @@ msgstr "Procurar Álbuns"
 msgctxt "#32007"
 msgid "Search Songs"
 msgstr "Procurar Músicas"
+
+msgctxt "#32008"
+msgid "Search Actors"
+msgstr "Procurar Actores"
 
 msgctxt "#32101"
 msgid "Enter search string"
@@ -83,6 +87,10 @@ msgstr "Encontrar todos os álbuns"
 msgctxt "#32210"
 msgid "Find all songs"
 msgstr "Encontrar todas as músicas"
+
+msgctxt "#32211"
+msgid "Movies starring"
+msgstr "Filmes com"
 
 msgctxt "#32299"
 msgid "NEW SEARCH"
