--- a/resources/language/English (Australia)/strings.po
+++ b/resources/language/English (Australia)/strings.po
@@ -1,4 +1,4 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
 # Addon Provider: ronie
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: XBMC Translation Team\n"
+"Last-Translator: Kodi Translation Team\n"
 "Language-Team: English (Australia) (http://www.transifex.com/projects/p/xbmc-addons/language/en_AU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,6 +19,10 @@ msgstr ""
 msgctxt "#32000"
 msgid "General"
 msgstr "General"
+
+msgctxt "#32101"
+msgid "Enter search string"
+msgstr "Enter search string"
 
 msgctxt "#32205"
 msgid "Play trailer"
