--- a/resources/language/French/strings.po
+++ b/resources/language/French/strings.po
@@ -1,4 +1,4 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
 # Addon Provider: ronie
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: XBMC Translation Team\n"
+"Last-Translator: Kodi Translation Team\n"
 "Language-Team: French (http://www.transifex.com/projects/p/xbmc-addons/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,6 +48,10 @@ msgctxt "#32007"
 msgid "Search Songs"
 msgstr "Recherche Chansons"
 
+msgctxt "#32008"
+msgid "Search Actors"
+msgstr "Recherche Acteurs"
+
 msgctxt "#32101"
 msgid "Enter search string"
 msgstr "Entrer Mot de Recherche"
@@ -83,6 +87,10 @@ msgstr "Trouver tous les albums"
 msgctxt "#32210"
 msgid "Find all songs"
 msgstr "Trouver tous les chansons"
+
+msgctxt "#32211"
+msgid "Movies starring"
+msgstr "Films avec"
 
 msgctxt "#32299"
 msgid "NEW SEARCH"
