--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -1,4 +1,4 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
 # Addon Provider: ronie
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: XBMC Translation Team\n"
+"Last-Translator: Kodi Translation Team\n"
 "Language-Team: German (http://www.transifex.com/projects/p/xbmc-addons/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +30,7 @@ msgstr "Suche TV-Serien"
 
 msgctxt "#32003"
 msgid "Search Episodes"
-msgstr "Suche Episoden"
+msgstr "Folgen suchen"
 
 msgctxt "#32004"
 msgid "Search Music Videos"
@@ -78,7 +78,7 @@ msgstr "Finde alle Staffeln"
 
 msgctxt "#32208"
 msgid "Find all episodes"
-msgstr "Finde alle Episoden"
+msgstr "Nach allen Folgen suchen"
 
 msgctxt "#32209"
 msgid "Find all albums"
