--- a/resources/language/Lithuanian/strings.po
+++ b/resources/language/Lithuanian/strings.po
@@ -1,4 +1,4 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
 # Addon Provider: ronie
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: XBMC Translation Team\n"
+"Last-Translator: Kodi Translation Team\n"
 "Language-Team: Lithuanian (http://www.transifex.com/projects/p/xbmc-addons/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,10 +20,78 @@ msgctxt "#32000"
 msgid "General"
 msgstr "Pagrindinis"
 
+msgctxt "#32001"
+msgid "Search Movies"
+msgstr "Ieškoti filmų"
+
+msgctxt "#32002"
+msgid "Search TV Shows"
+msgstr "Ieškoti TV laidų"
+
+msgctxt "#32003"
+msgid "Search Episodes"
+msgstr "Ieškoti epizodų"
+
+msgctxt "#32004"
+msgid "Search Music Videos"
+msgstr "Ieškoti muzikinių vaizdo klipų"
+
+msgctxt "#32005"
+msgid "Search Artists"
+msgstr "Ieškoti atlikėjų"
+
+msgctxt "#32006"
+msgid "Search Abums"
+msgstr "Ieškoti albumų"
+
+msgctxt "#32007"
+msgid "Search Songs"
+msgstr "Ieškoti dainų"
+
+msgctxt "#32008"
+msgid "Search Actors"
+msgstr "Ieškoti aktorių"
+
 msgctxt "#32101"
 msgid "Enter search string"
 msgstr "Įveskite paieškos eilutę"
 
+msgctxt "#32203"
+msgid "Browse album"
+msgstr "Naršyti albumą"
+
+msgctxt "#32204"
+msgid "Season information"
+msgstr "Sezono informacija"
+
 msgctxt "#32205"
 msgid "Play trailer"
-msgstr "Atkūrti filmo anonsą"
+msgstr "Atkurti anonsą"
+
+msgctxt "#32206"
+msgid "Find album"
+msgstr "Rasti albumą"
+
+msgctxt "#32207"
+msgid "Find all seasons"
+msgstr "Rasti visus sezonus"
+
+msgctxt "#32208"
+msgid "Find all episodes"
+msgstr "Rasti visus epizodus"
+
+msgctxt "#32209"
+msgid "Find all albums"
+msgstr "Rasti visus albumus"
+
+msgctxt "#32210"
+msgid "Find all songs"
+msgstr "Rasti visas dainas"
+
+msgctxt "#32211"
+msgid "Movies starring"
+msgstr "Filmai, kuriuose vaidina"
+
+msgctxt "#32299"
+msgid "NEW SEARCH"
+msgstr "NAUJA PAIEŠKA"
