--- a/resources/language/Tamil (India)/strings.po
+++ b/resources/language/Tamil (India)/strings.po
@@ -1,4 +1,4 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
 # Addon Provider: ronie
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: XBMC Translation Team\n"
+"Last-Translator: Kodi Translation Team\n"
 "Language-Team: Tamil (India) (http://www.transifex.com/projects/p/xbmc-addons/language/ta_IN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,3 +19,7 @@ msgstr ""
 msgctxt "#32000"
 msgid "General"
 msgstr "பொதுவானது"
+
+msgctxt "#32101"
+msgid "Enter search string"
+msgstr "தேடல் சொல் சரத்தை உள்ளிடவும்"
