--- a/resources/language/Asturian/strings.po
+++ b/resources/language/Asturian/strings.po
@@ -9,21 +9,13 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Malay (http://www.transifex.com/projects/p/xbmc-addons/language/ms/)\n"
+"Language-Team: Asturian (http://www.transifex.com/projects/p/xbmc-addons/language/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ms\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: ast\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#32000"
 msgid "General"
-msgstr "Am"
-
-msgctxt "#32101"
-msgid "Enter search string"
-msgstr "Masukkan rentetan gelintar"
-
-msgctxt "#32205"
-msgid "Play trailer"
-msgstr "Main treler"
+msgstr "Xeneral"
