--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -60,6 +60,14 @@ msgctxt "#32010"
 msgid "Search Directors"
 msgstr ""
 
+msgctxt "#32011"
+msgid "Search Plugins"
+msgstr ""
+
+msgctxt "#32012"
+msgid "Search Tags"
+msgstr ""
+
 #empty strings from id 32010 to 32100
 
 msgctxt "#32101"
