--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -114,6 +114,18 @@ msgctxt "#32211"
 msgid "Movies starring"
 msgstr ""
 
+msgctxt "#32212"
+msgid "Resume from"
+msgstr "Resume from"
+
+msgctxt "#32213"
+msgid "Resume"
+msgstr "Resume"
+
+msgctxt "#32214"
+msgid "Start from beginning"
+msgstr "Start from beginning"
+
 #empty strings from id 32212 to 32297
 
 msgctxt "#32298"
