fix listitem.title for episodes

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 v8.0.2
 - fix content selection when using a horizontal menu
+- fixed incorrect listitem.title for episodes
 
 v8.0.1
 - fix passing search categories to the script
