--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v8.0.3
+- reset menu on init
+
 v8.0.2
 - fix content selection when using a horizontal menu
 - fixed incorrect listitem.title for episodes
