--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-v9.0.1
+v8.0.5
+- favourites fix
+
+v8.0.4
 - add to favourites context menu item
 - case insensitive search for actors and directors
 
