--- a/resources/language/resource.language.ru_RU/strings.po
+++ b/resources/language/resource.language.ru_RU/strings.po
@@ -56,9 +56,17 @@ msgctxt "#32009"
 msgid "Search EPG"
 msgstr "Поиск телепередач"
 
+msgctxt "#32010"
+msgid "Search Directors"
+msgstr "Поиск режиссеров"
+
 msgctxt "#32101"
 msgid "Enter search string"
 msgstr "Строка поиска"
+
+msgctxt "#32102"
+msgid "Items"
+msgstr "Элементы"
 
 msgctxt "#32203"
 msgid "Browse album"
@@ -96,6 +104,18 @@ msgctxt "#32211"
 msgid "Movies starring"
 msgstr "В главных ролях"
 
+msgctxt "#32212"
+msgid "Resume from %s"
+msgstr "Продолжить c %s"
+
+msgctxt "#32297"
+msgid "Searching:"
+msgstr "Поиск:"
+
+msgctxt "#32298"
+msgid "Search again?"
+msgstr "Искать снова?"
+
 msgctxt "#32299"
-msgid "NEW SEARCH"
-msgstr "НОВЫЙ ПОИСК"
+msgid "New search"
+msgstr "Новый поиск"
