--- a/resources/language/resource.language.ru_RU/strings.po
+++ b/resources/language/resource.language.ru_RU/strings.po
@@ -53,7 +53,7 @@ msgid "Search Actors"
 msgstr "Поиск актёров"
 
 msgctxt "#32009"
-msgid "Search Live TV"
+msgid "Search EPG"
 msgstr "Поиск телепередач"
 
 msgctxt "#32010"
