--- a/resources/language/resource.language.uk_UA/strings.po
+++ b/resources/language/resource.language.uk_UA/strings.po
@@ -18,8 +18,104 @@ msgstr ""
 
 msgctxt "#32000"
 msgid "General"
-msgstr "Загальні"
+msgstr "Основні"
+
+msgctxt "#32001"
+msgid "Search Movies"
+msgstr "Пошук фільмів"
+
+msgctxt "#32002"
+msgid "Search TV Shows"
+msgstr "Пошук серіалів"
+
+msgctxt "#32003"
+msgid "Search Episodes"
+msgstr "Пошук серій"
+
+msgctxt "#32004"
+msgid "Search Music Videos"
+msgstr "Пошук муз. відео"
+
+msgctxt "#32005"
+msgid "Search Artists"
+msgstr "Пошук виконавців"
+
+msgctxt "#32006"
+msgid "Search Albums"
+msgstr "Пошук альбомів"
+
+msgctxt "#32007"
+msgid "Search Songs"
+msgstr "Пошук пісень"
+
+msgctxt "#32008"
+msgid "Search Actors"
+msgstr "Пошук акторів"
+
+msgctxt "#32009"
+msgid "Search EPG"
+msgstr "Пошук телепередач"
+
+msgctxt "#32010"
+msgid "Search Directors"
+msgstr "Пошук режисерів"
 
 msgctxt "#32101"
 msgid "Enter search string"
 msgstr "Рядок пошуку"
+
+msgctxt "#32102"
+msgid "Items"
+msgstr "Елементи"
+
+msgctxt "#32203"
+msgid "Browse album"
+msgstr "Переглянути альбом"
+
+msgctxt "#32204"
+msgid "Season information"
+msgstr "Інформація про сезон"
+
+msgctxt "#32205"
+msgid "Play trailer"
+msgstr "Показати трейлер"
+
+msgctxt "#32206"
+msgid "Find album"
+msgstr "Знайти альбом"
+
+msgctxt "#32207"
+msgid "Find all seasons"
+msgstr "Знайти всі сезони"
+
+msgctxt "#32208"
+msgid "Find all episodes"
+msgstr "Знайти всі серії"
+
+msgctxt "#32209"
+msgid "Find all albums"
+msgstr "Знайти всі альбоми"
+
+msgctxt "#32210"
+msgid "Find all songs"
+msgstr "Знайти всі пісні"
+
+msgctxt "#32211"
+msgid "Movies starring"
+msgstr "В ролях"
+
+msgctxt "#32212"
+msgid "Resume from %s"
+msgstr "Продовжити c %s"
+
+msgctxt "#32297"
+msgid "Searching:"
+msgstr "Пошук:"
+
+msgctxt "#32298"
+msgid "Search again?"
+msgstr "Шукати знову?"
+
+msgctxt "#32299"
+msgid "New search"
+msgstr "Новий пошук"
