--- a/resources/language/resource.language.ru_RU/strings.po
+++ b/resources/language/resource.language.ru_RU/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Global Search
 # Addon id: script.globalsearch
-# Addon Provider: ronie
+# Addon Provider: ronie, YLLOW_DRAGON
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -9,11 +9,11 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/xbmc-addons/language/ru/)\n"
+"Language-Team: Russian (http://www.transifex.com/projects/p/xbmc-addons/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru\n"
+"Language: ru_RU\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgctxt "#32000"
