--- a/resources/language/resource.language.ru_RU/strings.po
+++ b/resources/language/resource.language.ru_RU/strings.po
@@ -119,3 +119,7 @@ msgstr "Искать снова?"
 msgctxt "#32299"
 msgid "New search"
 msgstr "Новый поиск"
+
+msgctxt "#32300"
+msgid "Content View"
+msgstr "Вид содержимого"
