--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v9.0.1
+- bump
+
+v9.0.0
+- changes for python 3
+
 v8.0.12
 - fix sorting of album songs and season episodes
 
@@ -25,6 +31,9 @@ v8.0.5
 v8.0.4
 - add to favourites context menu item
 - case insensitive search for actors and directors
+
+v9.0.0
+- changes for python 3
 
 v8.0.3
 - reset menu on init
