--- a/resources/language/resource.language.es_ES/strings.po
+++ b/resources/language/resource.language.es_ES/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
+"Last-Translator: Rafa Oliveros (2020)\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/xbmc-addons/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgstr "Buscar películas"
 
 msgctxt "#32002"
 msgid "Search TV Shows"
-msgstr "Buscar series"
+msgstr "Buscar series TV"
 
 msgctxt "#32003"
 msgid "Search Episodes"
@@ -41,7 +41,7 @@ msgid "Search Artists"
 msgstr "Buscar intérpretes"
 
 msgctxt "#32006"
-msgid "Search Abums"
+msgid "Search Albums"
 msgstr "Buscar álbumes"
 
 msgctxt "#32007"
@@ -50,19 +50,28 @@ msgstr "Buscar canciones"
 
 msgctxt "#32008"
 msgid "Search Actors"
-msgstr "Actores de busqueda"
+msgstr "Buscar actores"
 
 msgctxt "#32009"
-msgid "Search EPG"
-msgstr "Buscar EPG"
+msgid "Search Live TV"
+msgstr "Buscar en TV en directo"
 
+msgctxt "#32010"
+msgid "Search Directors"
+msgstr "Buscar directores"
+
+#empty strings from id 32010 to 32100									 
 msgctxt "#32101"
 msgid "Enter search string"
-msgstr "Introduzca la cadena de búsqueda"
+msgstr "Introduzca cadena de búsqueda"
+
+msgctxt "#32102"
+msgid "Items"
+msgstr "Elementos"		 
 
 msgctxt "#32203"
 msgid "Browse album"
-msgstr "Examinar álbum"
+msgstr "Explorar álbum"
 
 msgctxt "#32204"
 msgid "Season information"
@@ -70,7 +79,7 @@ msgstr "Información de la temporada"
 
 msgctxt "#32205"
 msgid "Play trailer"
-msgstr "Ver trailer"
+msgstr "Reproducir tráiler"
 
 msgctxt "#32206"
 msgid "Find album"
@@ -94,7 +103,21 @@ msgstr "Encontrar todas las canciones"
 
 msgctxt "#32211"
 msgid "Movies starring"
-msgstr "Interpretes de la pelicula"
+msgstr "Películas protagonizadas"
+
+msgctxt "#32212"
+msgid "Resume from %s"
+msgstr "Reanudar desde %s"
+
+#empty strings from id 32213 to 32296
+
+msgctxt "#32297"
+msgid "Searching:"
+msgstr "Buscando:"
+
+msgctxt "#32298"
+msgid "Search again?"
+msgstr "¿Desea buscar de nuevo?"
 
 msgctxt "#32299"
 msgid "NEW SEARCH"
